--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   "description": "",
   "dependencies": {
     "axios": "^1.7.9",
-    "dotenv": "^16.4.7",
-    "node-notifier": "^10.0.1"
+    "dotenv": "^16.4.7"
   }
 }
